--- a/src/pages/ordering/Ordering.scss
+++ b/src/pages/ordering/Ordering.scss
@@ -1,6 +1,6 @@
 .ordering-container {
   display: flex;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -12,18 +12,17 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   width: 20%;
   flex-shrink: 0;
   max-width: 150px;
-  background-color: #f5f5f5;
+  border-right: 1px solid #ccc;
 }
 
 .ordering-product-list {
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
+  flex: 1;
 }
