--- a/src/pages/ordering/components/product/ProductItem.scss
+++ b/src/pages/ordering/components/product/ProductItem.scss
@@ -49,6 +49,20 @@
         justify-content: flex-end;
         flex: 1;
 
+        .customized-button {
+          position: relative;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 50px;
+          background-color: #f90;
+          font-size: 30px;
+          padding: 5px 20px;
+          margin: 0;
+          color: #fff;
+          border: none;
+        }
+
         .qty-button {
           position: relative;
           display: flex;
@@ -57,8 +71,8 @@
           background-color: #f90;
           color: #fff;
           padding: 0;
-          width: 40px;
-          height: 40px;
+          width: 50px;
+          height: 50px;
           border-radius: 50%;
           font-size: 40px;
           margin: 0;
